# anomapay-erc20-resource

./: Cargo.toml  README.md  taplo.toml
.github/workflows/: ci.yml
transfer_circuit/: Cargo.toml  README.md
transfer_circuit/methods/: Cargo.toml
transfer_circuit/methods/guest/: Cargo.toml
transfer_circuit/methods/guest/src/: main.rs
transfer_circuit/src/: test.rs
transfer_circuit_v2/: Cargo.toml  README.md
transfer_circuit_v2/methods/: Cargo.toml
transfer_circuit_v2/methods/guest/: Cargo.toml
transfer_circuit_v2/methods/guest/src/: main.rs
transfer_circuit_v2/src/: lib.rs  test.rs
transfer_library/: Cargo.toml  README.md
transfer_library/src/: lib.rs
transfer_library_v2/: Cargo.toml  README.md
transfer_library_v2/src/: lib.rs  migrate_tx.rs
transfer_witness/: Cargo.toml  README.md
transfer_witness/src/: call_type.rs  lib.rs
transfer_witness_v2/: Cargo.toml  README.md
transfer_witness_v2/src/: call_type_v2.rs  lib.rs
