[workspace]
exclude = ["transfer_circuit", "transfer_circuit_v2"]
members = [
  "transfer_witness",
  "transfer_witness_v2",
  "transfer_library",
  "transfer_library_v2",
]
resolver = "3"

[workspace.package]
authors = ["Xuyang <xuyang@heliax.dev>"]
edition = "2024"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/anoma/anomapay-erc20-resource"
version = "2.0.0"

[workspace.dependencies]
alloy-primitives = "1.0.23"
alloy-sol-types = "1.0.23"
anoma-rm-risc0 = { version = "1.1.1", default-features = false }
anoma-rm-risc0-gadgets = "1.1.1"
bincode = "1.3.3"
hex = "0.4"
k256 = { version = "0.13", default-features = false }
lazy_static = "1.5.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
transfer_library = { path = "transfer_library" }
transfer_library_v2 = { path = "transfer_library_v2" }
transfer_witness = "2.0.0"
transfer_witness_v2 = "2.0.0"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3
