[package]
edition = "2021"
name = "token-transfer"
version = "1.0.0"

[workspace]

[dependencies]
anoma-rm-risc0 = { version = "1.1.1", default-features = false }
anoma-rm-risc0-gadgets = "1.1.1"
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
  "hash2curve",
], default-features = false }
risc0-zkvm = "3.0.3"
transfer_library = { path = "../transfer_library" }
transfer_witness = { path = "../transfer_witness" }

[dev-dependencies]
bincode = "1.3.3"
