[package]
edition = "2021"
name = "token-transfer-v2"
version = "0.1.0"

[workspace]

[dependencies]
anoma-rm-risc0 = { version = "1.1.1", default-features = false }
anoma-rm-risc0-gadgets = "1.1.1"
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
  "hash2curve",
], default-features = false }
risc0-zkvm = "3.0.3"
transfer_library = { path = "../transfer_library" }
transfer_library_v2 = { path = "../transfer_library_v2" }
transfer_witness = { path = "../transfer_witness" }
transfer_witness_v2 = { path = "../transfer_witness_v2" }

[dev-dependencies]
bincode = "1.3.3"
