[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "transfer_witness_v2"
readme.workspace = true
version.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anoma-rm-risc0 = { workspace = true, default-features = false }
anoma-rm-risc0-gadgets = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
transfer_witness = { workspace = true }
