[package]
description = "Build helper that compiles the token-transfer RISC Zero guest and exposes its ELF and ImageID."
edition = "2021"
name = "token-transfer-methods"
version = "2.0.0"

[build-dependencies]
risc0-build = { version = "3.0.3", features = ["unstable"] }

[package.metadata.risc0]
methods = ["guest"]
