[package]
description = "v2 RISC Zero guest entry point for the AnomaPay ERC20 transfer resource logic, with migration support."
edition = "2021"
name = "token-transfer-guest-v2"
version = "2.0.0"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "3.0.3", features = ["std", "unstable"] }
transfer_witness_v2 = { path = "../../../transfer_witness_v2" }

[patch.crates-io]
# Placing this patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 accelerator
# support for all downstream usages of the `sha2` crate.
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
